Fix unresolve error on iOS

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-native-chart-android",
   "version": "1.0.6",
   "description": "react-native-mpchart provide modules to add chart to android,all charts are come from mpandroidchart library.",
-  "main": "index.android.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
